# D-Schema

./: .gitignore  README.md  example.py  pyproject.toml  run_tests.sh  setup_dbs.py
d_schema/: __init__.py  db_parser.py  main.py  schema_generator.py  structures.py
d_schema/generators/: README.md  __init__.py  base_generator.py
d_schema/generators/ddl_schema/: __init__.py  generator.py
d_schema/generators/m_schema/: generator.py
d_schema/generators/mac_sql_schema/: generator.py
d_schema/generators/profile_report/: __init__.py
examples/: programmatic_usage.py
src/d_schema/: __init__.py  app.py  db_parser.py  structures.py
src/d_schema/config/: config.yaml
src/d_schema/config/generator/: ddl.yaml  m_schema.yaml  mac_sql.yaml  profile_report.yaml
src/d_schema/generators/ddl_schema/: generator.py
src/d_schema/generators/m_schema/: __init__.py  generator.py
src/d_schema/generators/mac_sql_schema/: __init__.py  generator.py
src/d_schema/generators/profile_report/: generator.py
tests/: README.md  mock_schema.py  test_db_parser.py  test_schema_generator.py
tests/test_generators/: test_ddl_schema_generator.py  test_m_schema_generator.py  test_mac_sql_schema_generator.py  test_profile_report_generator.py
